--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/Users/miguel/.pyenv/versions/2.7.16/bin/python"
+    "python.pythonPath": "/Users/miguel/.pyenv/versions/2.7.16/bin/python",
+    "python.workspaceSymbols.enabled": true
 }
