--- a/info.plist
+++ b/info.plist
@@ -66,7 +66,7 @@
 				<key>scriptfile</key>
 				<string></string>
 				<key>subtext</key>
-				<string>Show me something</string>
+				<string>Type to search. ⇧ Shift to preview. ⌘ + C to copy link</string>
 				<key>title</key>
 				<string>Search filmaffinity for</string>
 				<key>type</key>
