--- a/info.plist
+++ b/info.plist
@@ -122,8 +122,10 @@
 	</dict>
 	<key>variables</key>
 	<dict>
-		<key>MM_SIMPLE_MODE</key>
-		<string>True</string>
+		<key>MM_DISPLAY_DETAILS</key>
+		<string>1</string>
+		<key>MM_DISPLAY_THUMBNAILS</key>
+		<string>0</string>
 	</dict>
 	<key>version</key>
 	<string>0.1</string>
