--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,12 +5,27 @@
     "version": "0.2.0",
     "configurations": [
 
+
         {
-            "name": "Python: Current File",
+            "name": "update_details.py",
+            "type": "python",
+            "request": "launch",
+            "program": "update_details.py",
+            "args": ["111769"],
+            "env": {},
+            "console": "integratedTerminal",
+        },
+
+        {
+            "name": "main.py",
             "type": "python",
             "request": "launch",
             "program": "main.py",
-            "args": ["el", "silencio"],
+            "args": ["ho"],
+            "env": {
+                "MM_DISPLAY_DETAILS": "0",
+                "MM_DISPLAY_THUMBNAILS": "1"
+            },
             "console": "integratedTerminal",
         }
     ]
